.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Filled_Shift__c/VMS_Filled_Shift__c.object-meta.xml
<CustomObject>
    <label>VMS Filled Shifts</label>
    <nameField>
        <displayFormat>VFSN-{00000}</displayFormat>
        <label>VMS Filled Shifts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Filled Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>