.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Filled_Shift__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>VMS Filled Shifts</relationshipLabel>
    <relationshipName>VMS_Filled_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>