.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Filled_Shift__c/fields/VMS_Account__c.field-meta.xml
<CustomField>
    <fullName>VMS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VMS Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VMS Filled Shifts</relationshipLabel>
    <relationshipName>VMS_Filled_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>