.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Filled_Shift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VMS_Account__c</columns>
    <columns>VMS_Source__c</columns>
    <columns>Shift__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>